# qrssreader

./: .gitignore  AboutAppDialog.qml  CMakeLists.txt  ChannelItemView.qml  ChannelListItem.qml  ChannelsListItemView.qml  ChannelsListViewDelegateModel.qml  README.md  RSSSplitListView.qml  SimpleButton.qml  TextInputDialog.qml  UrlDialog.qml  main.cpp  main.hpp  main.qml  qml.qrc
src/cpp/rss/: Channel.cpp  Channel.hpp  ChannelModel.cpp  ChannelModel.hpp  Cloud.cpp  Cloud.hpp  Date.cpp  Date.hpp  Element.cpp  Element.hpp  Enclosure.cpp  Enclosure.hpp  Image.cpp  Image.hpp  Integer.cpp  Integer.hpp  Item.cpp  Item.hpp  Link.cpp  Link.hpp  ProxyChannelModel.cpp  ProxyChannelModel.hpp  Source.cpp  Source.hpp  Text.cpp  Text.hpp  TextInput.cpp  TextInput.hpp
src/cpp/ui/: MainWindowLogic.cpp  MainWindowLogic.hpp
src/cpp/utils/: IDStorage.cpp  IDStorage.hpp  SAXRSSHandler.cpp  SAXRSSHandler.hpp
